[metadata]
name = liquid_engine
version = 0.1.7
description = Liquid Engine standalone Python package
long_description = file: README.md
long_description_content_type = text/markdown

author = Bruno M. Saraiva, António D. Brito, Inês M. Cunha, Ricardo Henriques
author_email = bruno.msaraiva2@gmail.com, antmsbrito95@gmail.com, inescunha200@gmail.com, ricardo.jv.henriques@gmail.com
license_files = LICENSE
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Testing

[options]
packages = find:

python_requires = >=3.9
include_package_data = True
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy>=1.22,<2
    scikit-learn>=1.1.0
    scipy>=1.8
    pyyaml>=6.0
    importlib_resources

[options.packages.find]
where=src

[tool:pytest]
minversion = 6.0
testpaths =
    tests